--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ Select ONE Additional
 
   <body>
     <h1>
-      Day At The Park
+     Tortoise and the Hare
     </h1>
 
       <canvas id="myCanvas" data-processing-sources="myP5Code.pde"> </canvas>
